packages/ckeditor5-bookmark/theme/bookmarkactions.css
/*
 * Copyright (c) 2003-2024, CKSource Holding sp. z o.o. All rights reserved.
 * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 */

@import "@ckeditor/ckeditor5-ui/theme/mixins/_rwd.css";

.ck.ck-bookmark-actions {
	& .ck-bookmark-actions__preview {
		& .ck-button__label {
			max-width: var(--ck-input-width);
			min-width: 3em;
			text-overflow: ellipsis;
			overflow: hidden;
		}
	}

	@mixin ck-media-phone {
		display: flex;
		flex-wrap: wrap;

		& .ck-bookmark-actions__preview {
			flex-basis: 100%;
			padding: var(--ck-spacing-standard);
			justify-content: center;

			& .ck-button__label {
				min-width: auto;
			}
		}

		& .ck-button:not(.ck-bookmark-actions__preview) {
			flex-basis: 50%;
			margin-top: 0;
		}
	}
}

